добавлен сваггер, добавлен тест получения след. номера автомобиля